--- a/style/general.scss
+++ b/style/general.scss
@@ -7,3 +7,9 @@ a {
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+/** PER LA BANDIERA INGLESE/AMERICANA **/
+
+.fi-en {
+    background-image: url(../src/assets/us.svg);
+}
